# doc2sys

./: README.md  pyproject.toml
doc2sys/: hooks.py  modules.txt
doc2sys/doc2sys/doctype/d2s_item/: d2s_item.js  d2s_item.json  d2s_item.py  test_d2s_item.py
doc2sys/doc2sys/doctype/doc2sys_document_type/: doc2sys_document_type.js  doc2sys_document_type.json  doc2sys_document_type.py  test_doc2sys_document_type.py
doc2sys/doc2sys/doctype/doc2sys_extraction_field/: doc2sys_extraction_field.json  doc2sys_extraction_field.py
doc2sys/doc2sys/doctype/doc2sys_field_mapping/: doc2sys_field_mapping.json  doc2sys_field_mapping.py
doc2sys/doc2sys/doctype/doc2sys_file_type/: doc2sys_file_type.json  doc2sys_file_type.py
doc2sys/doc2sys/doctype/doc2sys_integration_doctypes/: doc2sys_integration_doctypes.json  doc2sys_integration_doctypes.py
doc2sys/doc2sys/doctype/doc2sys_integration_log/: doc2sys_integration_log.js  (+3 more)
doc2sys/doc2sys/tasks/: folder_monitor.py
doc2sys/doc2sys/utils/: payment_integration.py  portal_api_keys.py  test_payment_integration.py  user_integration.py
doc2sys/engine/: __init__.py  config.py  exceptions.py  llm_processor.py  ml_classifier.py  models.py  nlp_extractor.py  processor.py  text_extractor.py  utils.py
doc2sys/integrations/: __init__.py  base.py  events.py  log_utils.py  registry.py  utils.py
doc2sys/integrations/connectors/: __init__.py  erpnext.py  quickbooks.py
doc2sys/public/js/: doc2sys.js
doc2sys/setup/: install.py
doc2sys/www/: api_keys.html  api_keys.py  quickbooks_callback.html  quickbooks_callback.py
(+28 files in other folders)
