[project]
name = "doc2sys"
authors = [
    { name = "KAINOTOMO PH LTD", email = "info@kainotomo.com"}
]
description = "A document automation software that extracts data from various files (images, PDFs etc), validates them, and integrates them into accounting systems, deployable both in the cloud and on-premises."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
